[package]
name = "worterbuch-raft"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.22"
miette = { version = "7.2.0", features = ["fancy"] }
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["time"] }
tokio-graceful-shutdown = "0.15.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
worterbuch-client = "0.45.2"
